--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>testng</artifactId>
             <version>7.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.8.3</version>
+        </dependency>
     </dependencies>
 </project>
